; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_jv-lang.c_java_class_is_primitive.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_jv-lang.c_java_class_is_primitive.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.value = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"vtable\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"struct\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.value*)* @java_class_is_primitive to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @java_class_is_primitive(%struct.value* %0) #0 {
  %2 = alloca %struct.value*, align 8
  %3 = alloca %struct.value*, align 8
  %4 = alloca i32, align 4
  store %struct.value* %0, %struct.value** %2, align 8
  %5 = call %struct.value* @value_struct_elt(%struct.value** %2, i32* null, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32* null, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  store %struct.value* %5, %struct.value** %3, align 8
  %6 = load %struct.value*, %struct.value** %3, align 8
  %7 = call i32 @value_as_address(%struct.value* %6)
  store i32 %7, i32* %4, align 4
  %8 = load i32, i32* %4, align 4
  %9 = and i32 %8, 2147483647
  %10 = icmp eq i32 %9, 2147483647
  %11 = zext i1 %10 to i32
  ret i32 %11
}

declare dso_local %struct.value* @value_struct_elt(%struct.value**, i32*, i8*, i32*, i8*) #1

declare dso_local i32 @value_as_address(%struct.value*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
